# pg_grpc_service_template

./: .gitignore  CMakeLists.txt  Makefile  Makefile.local  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
cmake/: Config.cmake.in  Installing.cmake  Packaging.cmake
configs/: config_vars.docker.template.yaml  config_vars.docker.yaml  config_vars.template.yaml  config_vars.testing.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  static_config.yaml  static_config.yaml.in
proto/handlers/: hello.proto
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_client.cpp  hello_client.hpp  hello_http_proxy.cpp  hello_http_proxy.hpp  hello_test.cpp  main.cpp
tests/: CMakeLists.txt  conftest.py  pytest.ini  requirements.txt  run_as_user.sh  test_grpc_client.py  test_grpc_server.py  test_hello.py
tests/.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
tests/.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
tests/.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
tests/.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
tests/.mypy_cache/3.7/tests/: __init__.data.json  __init__.meta.json  test_grpc_client.data.json  test_grpc_client.meta.json
